--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Instascan</title>
+    <title>Leer qr</title>
     <script type="text/javascript" src="instascan.min.js"></script>
   </head>
   <body style="background-color: black;">
     <div style="display: block; width: 100%; margin: 0px auto;color: white;background-color: black;">
         <div >
             <center><h1 style="padding-left: 20px;">Vuelva a escanear el QR</h1></center>
-          <center><video id="preview" width="350px" height="350px" style="border-radius: 20px;"></video></center>
+          <center><video id="preview" width="400px" height="400px" style="border-radius: 20px;"></video></center>
         </div>
     </div>
    
@@ -19,7 +19,7 @@
       });
       Instascan.Camera.getCameras().then(function (cameras) {
         if (cameras.length > 0) {
-          scanner.start(cameras[0]);
+          scanner.start(cameras[1]);
         } else {
           console.error('No cameras found.');
         }
