--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Leer qr</title>
+    <script src="./jquery-3.6.0.js"></script>
     <script type="text/javascript" src="instascan.min.js"></script>
   </head>
   <body style="background-color: black;">
